src/objects/Incentive_Utility_Junction__c.object
<CustomObject>
    <fields>
        <fullName>Incentive_Offer__c</fullName>
        <label>Incentive Offer</label>
        <referenceTo>Incentive_Offer__c</referenceTo>
        <relationshipLabel>Applicable Utility Companies</relationshipLabel>
        <relationshipName>Incentive_Utility_Junctions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Utility_Company_Master__c</fullName>
        <label>Utility Company Master</label>
        <referenceTo>Utility_Company_master__c</referenceTo>
        <relationshipLabel>Incentive-Utility Junctions</relationshipLabel>
        <relationshipName>Incentive_Utility_Junctions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Utility_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Utility Rate Code</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Utility_Company__c.RecordType.Name</field>
                <operation>notEqual</operation>
                <value>Custom</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Utility_Company__c</referenceTo>
        <relationshipLabel>Utility Company Specific - Incentives</relationshipLabel>
        <relationshipName>Incentive_Utility_Junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Incentive-Utility Junction</label>
    <nameField>
        <displayFormat>IU-{00000}</displayFormat>
        <label>Incentive-Utility Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incentive-Utility Junctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>